k8s/networkpolicies/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cloud-cost-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
